# pwb2015

./: Makefile  best.sh  deleteme  executeSolutions.py  executeSolutions.sh  getParallel.sh  readme.md  run.sh  simplyTheBest.hs  solutions  trivial.py
src/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  field.cpp  field.hpp  main.cpp  parser.cpp  parser.hpp  result.hpp  result_manager.cpp  result_manager.hpp
src/algorithm/: best_now.cpp  best_now.hpp
src/step/: highest_immediate_score.cpp  highest_immediate_score.hpp  immediate_score.cpp  immediate_score.hpp  lowest_immediate_score.cpp  lowest_immediate_score.hpp  resulting_field.cpp  resulting_field.hpp
test/: 1up.txt  challenge1.txt  challenge2.txt  earth.txt  ppm_to_challenge.py
test/best/: simple.txt
